# tread

./: CLAUDE.md  Cargo.toml  README-zh.md  README.md  build-and-install.js  dist-workspace.toml  sample.md  test-cookies.rs  test.epub
.claude/: .claude-devkit-state.json
.claude/commands/opsx/: apply.md
.claude/live-devkit/: default-settings.json
.claude/live-devkit/commands/devkit/: help.md  uninstall.md
.claude/live-devkit/hooks/: check-openspec.cjs  generate-figma-manifest.sh
.claude/live-devkit/openspec/: claude-md-inject.md  devkit-context.md
.claude/rules/: live-devkit-development.md
.claude/skills/: FIGMA_WORKFLOW.md
.claude/skills/figma-spec/: skill.md
.claude/skills/interaction-demo/: skill.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-continue-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/xed-design/: SKILL.md
.github/workflows/: smoke-packaged-binaries.yml  v-release.yml
openspec/: config.yaml
openspec/changes/add-chinese-user-guide/: design.md  proposal.md  tasks.md
openspec/changes/add-tagged-binary-release/: design.md  proposal.md  tasks.md
openspec/changes/fix-table-and-code-rendering/: proposal.md  tasks.md
openspec/changes/inject-cookies-to-headless-chrome/: tasks.md
openspec/specs/epub-reader/: spec.md
openspec/specs/headless-browser/: spec.md
openspec/specs/image-preview/: spec.md
openspec/specs/link-interaction/: spec.md
openspec/specs/markdown-rendering/: spec.md
openspec/specs/reading-dashboard/: spec.md
openspec/specs/reading-history/: spec.md
openspec/specs/tui-navigation/: spec.md
openspec/specs/web-reader/: spec.md
src/: app.rs  dashboard.rs  epub.rs  headless.rs  history.rs  image.rs  main.rs  parser.rs  style_serde.rs  ui.rs  web.rs  xhtml.rs
(+93 files in other folders)
