[package]
name = "tread"
version = "0.1.0"
edition = "2024"
description = "A terminal-based reader for Markdown, EPUB and web content"

[[bin]]
name = "tread"
path = "src/main.rs"

[[bin]]
name = "test-cookies"
path = "test-cookies.rs"

[dependencies]
anyhow = "1"
cookie-scoop = "0.1"
crossterm = "0.28"
dirs = "6"
dom_smoothie = "0.18"
headless_chrome = "1"
pulldown-cmark = "0.12"
quick-xml = "0.37"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
unicode-width = "0.2"
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
