[package]
name = "tread"
version = "0.1.1"
edition = "2024"
description = "A terminal-based reader for Markdown, EPUB and web content"
license = "MIT"
repository = "https://github.com/liwuhou/tread"
homepage = "https://github.com/liwuhou/tread"
readme = "README.md"
keywords = ["terminal", "markdown", "epub", "reader", "tui"]
categories = ["command-line-utilities", "text-processing"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "tread"
path = "src/main.rs"


[dependencies]
anyhow = "1"
cookie-scoop = "0.1"
crossterm = "0.28"
dirs = "6"
dom_smoothie = "0.18"
headless_chrome = "1"
pulldown-cmark = "0.12"
quick-xml = "0.37"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
unicode-width = "0.2"
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
